# Hockey-World-Cup-Simulatation

./: ARG.py  AUS.py  AUT.py  BEL.py  CPU_match.py  ENG.py  ESP.py  GER.py  Game_def.py  IND.py  IRL.py  MAL.py  NED.py  NZL.py  Outfield_Player.py  PAK.py  README.md  RSA.py  Team_def.py  WAL.py  World_Cup_Final.py  __init__.py  commentary.py  draw_lists.py  match.py  pyproject.toml  quarter_finals_draw.py  round_of_16_draw.py  scoring_chance.py  semi_finals_draw.py
hockey_sim/: cli.py
hockey_sim/engine/: World_Cup_Final.py  __init__.py  matchsimulator.py
hockey_sim/players/: __init__.py  goalkeeper.py
hockey_sim/teams/: ARG.py  AUS.py  AUT.py  BEL.py  ENG.py  ESP.py  GER.py  IND.py  IRL.py  MAL.py  NED.py  NZL.py  PAK.py  RSA.py  SCO.py  WAL.py  __init__.py  team.py
hockey_sim/tournament/: tournament_manager.py
